fix styles on small viewports

--- a/sortable.css
+++ b/sortable.css
@@ -120,11 +120,11 @@ button:hover {
   }
 
   #checkAnswers {
-    width: 25%;
+    width: 48%;
   }
 
   #showAnswers {
-    width: 25%;
+    width: 48%;
   }
 
   #reset {
